src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 255, 246, 236;
  --background-end-rgb: 255, 246, 236;
}

html {
  scroll-behavior: smooth;
  font-family: 'Raleway', sans-serif;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

.text-shadow{
  text-shadow: 0.3px 0.3px 1px #800020;
}

body {
  color: rgb(0, 0, 0);
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(255, 246, 236)
    )
    rgb(255, 246, 236);
}



@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

